fixed clip bug on mobile and cont ref brows

--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,6 @@ body {
   background-color: #282828;
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 .bg_design,
@@ -54,12 +53,10 @@ section {
   height: 100%;
   top: 0;
   left: 0;
-  overflow-x: clip;
 }
 section {
   margin: 0;
   width: 100%;
-  overflow-x: clip;
 }
 header {
   width: 100%;
@@ -92,7 +89,6 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
   transition: 0.2s linear;
-  overflow-x: clip;
 }
 .bg_2 {
   transform: rotate(1deg);
@@ -214,7 +210,7 @@ header {
   transition: 0.4s;
 }
 .socials .fa {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255);
   font-size: 1.4vw;
   opacity: 0.8;
 }
@@ -834,6 +830,7 @@ a {
   overflow-x: clip;
   top: -12vw;
 }
+
 .eve_card,
 .eve_detail_1_1,
 .link-icon,
@@ -2427,7 +2424,6 @@ select {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    overflow-x: clip;
   }
   .bg_2 {
     border-radius: 39%;
